-ive made it blue like our pages but personally for me it doesnt look as good as i want it to, on the other hand i kinda fixed the overlap on the page but atm my issue is with the scrolling not hiding the cards in our title box but on the navbar box so if anyone can take a look at it for me i would appreciate it

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -35,6 +35,7 @@
   padding: 0px 16px;
   text-decoration: none;
   font-size: 18px;
+  font-family: $headers-font;
 }
 
 .navbar a:hover {
